# block

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  CLAUDE.md  DOWNLOAD_FONT.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FONT_SETUP.md  PROJECT_STATUS.md  README.md  android_test.sh  build-game.sh  build-gradle-ndk.sh  build-gradle.sh  build-qemu.sh  build-raylib-final.sh  build-raylib-native.sh  build-simple.sh  build-with-docker.sh  build-with-proot.sh  build.gradle.kts  build.sh  compile-with-qemu.sh  debug.keystore  debug.keystore.base64  deploy_to_device.sh  download_fonts.sh  fix-gradle-cache.sh  get-wrapper.sh  gradle-qemu-wrapper.sh  gradle.properties  gradlew  install-and-build.sh  push_to_termux.sh  quick-build.sh  quick-setup.sh  settings.gradle.kts  setup-box64-env.sh  setup-build-env.sh  setup-github.sh  (+10 more)
.github/workflows/: build.yml
app/: build.gradle.kts  debug.keystore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  assets.cpp  assets.cpp.backup  assets.h  assets_new.cpp  audio.cpp  audio.h  bullet.cpp  bullet.h  camera.cpp  camera.h  controls.cpp  controls.h  enemy.cpp  enemy.h  game.cpp  game.h  main.cpp  modes.cpp  modes.h  particles.cpp  particles.h  player.cpp  player.h  skills.cpp  skills.h  ui.cpp  ui.h  user.h  userManager.cpp  userManager.h
app/src/main/java/com/blockeater/: MainActivity.java
app/src/main/res/values/: strings.xml
